fix: adjust alignment and layout properties for order elements in section

--- a/styles/board.css
+++ b/styles/board.css
@@ -92,15 +92,11 @@
 
 .order_elements_in_section {
   display: flex;
-  /* align-items: start; */
-  /* justify-content: flex-start; */
+  align-items: start;
+  justify-content: flex-start;
   flex-direction: column;
   width: 22%;
-<<<<<<< HEAD
-  height: auto;
-=======
   
->>>>>>> ddde26bc6c75f6dc39b89ed53a5218c8798af398
 }
 
 .text_section {
@@ -111,16 +107,9 @@
 }
 
 .width_section {
-<<<<<<< HEAD
- flex-grow: 1;      
-  display: flex; 
-  flex-direction: column;
-  min-height: 200px;
-=======
   width: 100%;
   margin-top: 20px;
   height: 100vh;
->>>>>>> ddde26bc6c75f6dc39b89ed53a5218c8798af398
 }
 
 .no_task_available {
